<resources>
    <string name="app_name">etechapp</string>
    <string name="required">Veuillez saisir les champs obligatoires</string>
    <string name="required_mail">e-mail nécessaire</string>
    <string name="required_password">Mot de passe nécessaire</string>

    <!-- message d'erreur creer employe-->
    <string name="required_create_employe_nom">Nom nécessaire</string>
    <string name="required_create_employe_prenom">Nom nécessaire</string>
    <string name="required_create_employe_matricule">Matricule nécessaire</string>
    <string name="required_create_employe_birthdate">Date de naissance nécessaire</string>
    <string name="required_create_employe_hiringdate">Date d\'embauche nécessaire</string>
    <string name="required_create_employe_mail">e-mail nécessaire</string>


    <string name="required_prenom">Prénom nécessaire</string>
    <string name="required_nom">nom nécessaire</string>

    <string name="choisir_prendre_une_photo">Choisir / Prendre une photo</string>
    <string name="hint_votre_identifiant">Votre identifiant</string>
    <string name="hint_nom">Nom</string>
    <string name="hint_prenom">Prénom</string>
    <string name="hint_password">Mot de passe</string>
    <string name="label_btn_valider_inscription">Valider inscription</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="detail_employe_label">Détail de l\'employé</string>
    <string name="detail_matricule">Matricule: %1$d</string>
    <string name="detail_mail">e-mail: %1$s</string>
    <string name="detail_allias">( %1$s )</string>
    <string name="detail_age">%1$d ans</string>
    <!--le second parametre sert a differencier hiomme et femme-->
    <string name="detail_embauche">embauché%2$s le %1$s</string>
    <string name="detail_birth_date">né%2$s le %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_prenom_employe">Prénom de l\'employe</string>
    <string name="hint_nom_employe">Nom de l\'employé</string>
    <string name="hint_allias">Allias</string>
    <string name="hint_edt_date_de_naissance">Date de naissance</string>
    <string name="hint_matricule">Matricule</string>
    <string name="hint_date_embauche">Date d\'embauche</string>
    <string name="hint_e_mail">e-mail</string>
    <string name="rbutton_homme">Homme</string>
    <string name="rbutton_femme">Femme</string>
    <string name="btn_text_create_employe">Créer l\'employé</string>
    <string name="btn_text_update_employe">Modifier l\'employé</string>
    <string name="txt_aucun_poste">Aucun poste n\'a été affecté a cet employé</string>
    <string name="ajouter_un_poste">Ajouter un poste</string>
    <string name="choisir_poste">Choisir un poste</string>
    <string name="hint_add_poste_date_promotion">Date de promotion</string>
    <string name="supprimer">Supprimer</string>
    <string name="modifier">Modifier</string>
    <string name="annuler_operation">Annuler l\'opération</string>
    <string name="recherche">menu_action_search</string>
    <string name="info_pers_title">Informations personnelles</string>
    <string name="info_pro_title">Informations professionnelles</string>

    <!--fonts-->
    <string name="font_crimson">Crimson-Roman.otf</string>
    <string name="font_organic">Organic_fruit.woff</string>
    <string name="action_logout">Se déconnecter</string>
    <string name="email_incorrect">email incorrect</string>


</resources>
