<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="mg.etech.mobile.etechapp.presentation.fragments.employe.create.CreateEmployeFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/general_padding">

            <mg.etech.mobile.etechapp.commun.utils.TypefaceEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtCreateEmployeNom"
                style="@style/edt_general_style"
                android:hint="@string/hint_nom_employe" />

            <mg.etech.mobile.etechapp.commun.utils.TypefaceEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/edt_general_style"
                android:hint="@string/hint_prenom_employe"
                android:id="@+id/edtCreateEmployePrenom" />

            <mg.etech.mobile.etechapp.commun.utils.TypefaceEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/edt_general_style"
                android:hint="@string/hint_allias"
                android:id="@+id/edtCreateEmployeAllias" />

            <mg.etech.mobile.etechapp.commun.utils.TypefaceEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/edt_general_style"
                android:hint="@string/hint_matricule"
                android:id="@+id/edtCreateEmployeMatricule"
                android:inputType="number" />

            <mg.etech.mobile.etechapp.commun.utils.date.datepicker.SimpleDatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/edt_general_style"
                android:inputType="date"
                android:id="@+id/edtCreateEmployeBirthDate"
                android:hint="@string/hint_edt_date_de_naissance" />

            <mg.etech.mobile.etechapp.commun.utils.date.datepicker.SimpleDatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/edt_general_style"
                android:inputType="date"
                android:id="@+id/edtCreateEmployeHiringDate"
                android:hint="@string/hint_date_embauche" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/rGroupMale"
                android:layout_gravity="center">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rbutton_homme"
                    android:id="@+id/rBtnCreateEmployeHomme"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rBtnCreateEmployeFemme"
                    android:text="@string/rbutton_femme" />
            </RadioGroup>

            <mg.etech.mobile.etechapp.commun.utils.TypefaceEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtCreateEmployeMail"
                android:hint="@string/hint_e_mail"
                style="@style/edt_general_style" />

            <mg.etech.mobile.etechapp.presentation.customviews.Base64PhotoPicker_
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/b64CreateEmployePicker"
                android:gravity="center"></mg.etech.mobile.etechapp.presentation.customviews.Base64PhotoPicker_>


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_poleDto"></Spinner>

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/chipFlexBoxLayout"
                app:flexWrap="wrap"
                app:alignItems="stretch"
                app:alignContent="stretch"></com.google.android.flexbox.FlexboxLayout>


            <mg.etech.mobile.etechapp.commun.utils.TypefaceButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ajouter_un_poste"
                android:id="@+id/btnCreateEmployeAddPoste" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rond_shape_blue"
                android:text="@string/btn_text_create_employe"
                android:id="@+id/btnCreaterEmploye"
                app:spinning_bar_width="4dp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="6dp"
                android:layout_gravity="center_horizontal"

                />
        </LinearLayout>

    </ScrollView>
</FrameLayout>
