<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="mg.etech.mobile.etechapp.presentation.fragments.employe.detail.DetailEmployeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="#e2e2e2"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/etechBlack"></LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="@dimen/detail_employe_photo_size"
                    android:layout_height="@dimen/detail_employe_photo_size"
                    android:src="@drawable/ic_mahery"
                    android:id="@+id/imageView_detailPhoto"
                    android:layout_centerHorizontal="true"

                    android:layout_marginTop="25dp"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="5dp"
                    android:visibility="gone"
                    />

                <mg.etech.mobile.etechapp.presentation.customviews.PicassoImageView_
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:id="@+id/pImageViewDetailPhoto"
                    android:layout_marginTop="25dp"
                    android:layout_centerHorizontal="true"
                    android:visibility="invisible"></mg.etech.mobile.etechapp.presentation.customviews.PicassoImageView_>

            </RelativeLayout>


            <com.wajahatkarim3.easyflipview.EasyFlipView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/flipViewDetailEmploye"
                app:flipEnabled="true"
                android:visibility="invisible"
                >

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/general_padding"
                    android:id="@+id/cardDetailBack"
                    android:visibility="invisible"
                    android:layout_margin="@dimen/general_margin"

                    >


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/txt_aucun_poste"
                        android:visibility="gone"
                        android:id="@+id/txtHistoryNoPoste"
                        android:textSize="@dimen/general_font_size1.5x"
                        android:padding="@dimen/general_font_size1.5x" />

                    <android.support.v7.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/recyclerView_detailHistoryPoste">


                    </android.support.v7.widget.RecyclerView>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/little_margin"
                    android:layout_marginBottom="@dimen/little_margin"
                    android:layout_marginLeft="@dimen/general_margin"
                    android:layout_marginRight="@dimen/general_margin"
                    android:id="@+id/cardDetailFront">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingTop="@dimen/little_padding"
                        android:paddingBottom="@dimen/little_padding"
                        android:paddingRight="@dimen/general_padding"
                        android:paddingLeft="@dimen/general_padding"
                        android:gravity="center_horizontal">

                        <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_matricule"
                            android:id="@+id/txtDetailMatricule"
                            android:padding="@dimen/little_padding"
                            app:customTypeface="@string/font_crimson" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/general_font_size"
                                android:text="NOM et prenom de l'employe"
                                android:id="@+id/txtDetailNom"
                                android:padding="@dimen/little_padding" />

                            <ImageView
                                android:layout_width="@dimen/general_font_size2x"
                                android:layout_height="@dimen/general_font_size2x"
                                android:src="@drawable/ic_homme_backup"
                                android:id="@+id/imageView_detailIsMale" />
                        </LinearLayout>

                        <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtDetailAlias"
                            android:text="@string/detail_allias"
                            android:padding="@dimen/little_padding" />


                        <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/general_font_size"
                            android:text="Poste de l'employé"
                            android:id="@+id/txtPosteActuel"
                            android:padding="@dimen/little_padding" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="@dimen/little_padding">

                            <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtDetailBirthDate"
                                android:text="@string/detail_birth_date"
                                android:padding="@dimen/little_padding" />

                            <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/txtDetailAge"
                                android:text="@string/detail_age"
                                android:padding="@dimen/little_padding" />

                        </LinearLayout>

                        <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/txtDetailHiringDate"
                            android:text="@string/detail_embauche"
                            android:padding="@dimen/little_padding" />

                        <mg.etech.mobile.etechapp.commun.utils.TypefaceTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/detail_mail"
                            android:id="@+id/txtDetailMail"
                            android:padding="@dimen/little_padding" />

                        <mg.etech.mobile.etechapp.commun.utils.TypefaceButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="HISTORIQUE DES POSTES"
                            android:paddingRight="@dimen/general_padding"
                            android:background="@drawable/round_shape_numeric_green"
                            android:drawableLeft="@drawable/ic_historic_poste"
                            android:id="@+id/btnDetailEmployeFlipToHistorique" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>


            </com.wajahatkarim3.easyflipview.EasyFlipView>
        </LinearLayout>
        .
    </ScrollView>
</FrameLayout>
